@@ -27,10 +27,7 @@ COMMON_FLAGS= --prefix=/usr \
 	      --mandir=\$${prefix}/share/man \
 	      --infodir=\$${prefix}/share/info \
 	      --localstatedir=/var/lib/synaptic \
-	      --sysconfdir=/etc --with-vte --with-pkg-hold \
-	      --with-apt-authentication \
-              --enable-ept \
-	      --with-nice-dpkg-status
+	      --sysconfdir=/etc --with-pkg-hold
 
 CREATE_SUPPORTED_PIXMAP="true"
 CONFIGURE_FLAGS = $(COMMON_FLAGS)
