@@ -11,8 +11,10 @@ synaptic (0.70~pre2) UNRELEASED; urgency=low
   * common/rpackagecache.{cc,h}, common/rpackage.cc:
     - add cache for PkgFileIterator->pkgIndexFile* to speed up
       RPackage::IsTrusted (LP: #165181)
+  * debian/patches/03_hide_browse_documentation.dpatch: [DESCRIBE
+    CHANGES HERE]
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 23 Aug 2010 10:27:49 +0200
+ -- Michael Vogt <mvo@ubuntu.com>  Tue, 19 Oct 2010 10:40:40 +0200
 
 synaptic (0.70~pre1) unstable; urgency=low
 
